# OSPGL_IN_DEV

./: CMakeLists.txt  CMakeLists.txt.~0~  Makefile  README.md  main.c  main.cpp.~0~  program
GraphicsPro/include/: GraphicsPro.h  GraphicsPro.hpp  GraphicsProFunctions.h  SDL2FunctionAdapter.h  WindowManager.h
GraphicsPro/include/HeaderControllers/: GraphicsProFunctions.c  WindowManager.c
